# vk-school-monitor

./: .env.example  .gitignore  pyproject.toml
src/: config.py  main.py
src/client/: __init__.py  vk_client.py
src/client/scripts/: __init__.py  wall_get_any.py  wall_get_script.py
src/db/: mixins.py  session.py
src/db/methods/: user.py
src/db/migrations/: env.py
src/db/migrations/versions/: 16a42cb424ee_add_last_post_date_in_users.py  2a76f995f31e_add_optional_to_last_post_date.py  a30f1e337a92_remove_id_pk_in_users.py  a34cd1a5cf2c_initial_revision.py  f9c55f171c84_add_indexes_and_fix_problems.py
src/db/models/: __init__.py  alert.py  base.py  post.py  user.py
